# sinoword

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sinoword-friso-api.el  sinoword.el
src/: init.c  libefriso.c  libefriso.h
